<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--  <string name="app_name">移动考勤远程管理系统</string> -->
    <string name="app_name_default">汇川智能</string>
    <string name="app_note">汇聚智慧，海纳百川</string>
    <string name="main_province">地区：</string>
    <string name="main_account">账号：</string>
    <string name="main_password">密码：</string>
    <string name="main_save_password">记住密码</string>
    <string name="main_auto_login">自动登录</string>
    <string name="main_login">登录</string>
    <string name="setting_exit">退出</string>
    <string name="btn_back">返回</string>
    <string name="title_take_photo">监管影像采集</string>
    <string name="title_take_photo2">工作影像采集</string>
    <string name="title_attendance_manager">网络考勤</string>
    <string name="title_face_sign">人脸识别</string>
    <string name="title_binding">试件跟踪</string>
    <string name="title_photo">历史照片</string>
    <string name="title_about">关于我们</string>
    <string name="title_app_update">在线更新</string>
    <string name="title_setting">设置</string>
    <string name="title_nfc_write">标签写入</string>
    <string name="title_video">视频查看</string>
    <string name="title_video_sencod">摄像头选择</string>
    <string name="main_company">技术支持：福建汇川物联网技术科技股份有限公司</string>
    <string name="btn_app_update">马上升级</string>
    <string name="title_take_adjustproject">工程任务调整</string>
    <string name="title_take_safe">安全监管</string>
    <string name="title_take_quality">质量监管</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="memo">提示</string>
    <string name="barcode_tow_dimen_success">"已检测到地址:%1$s是否打开?"</string>
    <string name="barcode_one_dimen_success">"已检测到文本内容:%1$s是否复制?"</string>
    <string name="msg_default_status">请将二维码置于屏幕中间(若光线暗请按音量的增加键)。  </string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>

    <string-array name="project_type">
        <item>外勤</item>
        <item>勘察</item>
        <item>移机</item>
        <item>维护</item>
        <item>设计 </item>
        <item>交底</item>
        <item>安装</item>
        <item>拆机</item>
        <item>管理</item>
    </string-array>
    <string-array name="typeName">
        <item>地基基础</item>
        <item>主体结构</item>
        <item>装饰装修</item>
    </string-array>
    <string-array name="province">
        <item>福建</item>
        <item>西藏 </item>
    </string-array>
    <string-array name="fj_city">
        <item>全部</item>
        <item>福州市</item>
        <item>厦门市 </item>
        <item>莆田市 </item>
        <item>三明市 </item>
        <item>泉州市 </item>
        <item>漳州市</item>
        <item>南平市 </item>
        <item>龙岩市 </item>
        <item>宁德市 </item>
    </string-array>
    <string-array name="xz_city">
        <item>全部</item>
        <item>拉萨市</item>
        <item>那曲地区</item>
        <item>昌都地区</item>
        <item>山南地区</item>
        <item>日喀则地区</item>
        <item>阿里地区</item>
        <item>林芝地区</item>
    </string-array>

    <!-- 图片浏览 -->
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>

    <!-- 梯控设备绑定 -->
    <string name="driver_num_search">设备编号:</string>
    <string name="driver_num">设备编号：</string>
    <string name="edit_driver_num">请输入设备编号</string>
    <string name="driver_search">搜索</string>
    <string name="driver_scan">扫一扫</string>
    <string name="driver_mac">mac地址：</string>
    <string name="driver_project">项目工程：</string>
    <string name="install_place">安装位置：</string>
    <string name="driver_static">设备状态：</string>
    <string name="bind_driver">绑定设备</string>
    <string name="debind_driver">解绑设备</string>
    <string name="driver_name">设备名称：</string>
    <string name="add_securityofficer">安全员</string>
    <string name="add_operator">操作员</string>

    <string name="humen_name">人员姓名：</string>
    <string name="humen_idnum">身份证号：</string>
    <string name="humen_qualification_certificate">资格证号：</string>
    <string name="humen_phone">人员手机：</string>
    <string name="humen_project">所在项目：</string>
    <string name="login_pass">登录密码：</string>
    <string name="open_pass">开锁密码：</string>
    <string name="frist_image">第一次采样图：</string>
    <string name="second_image">第二次采样图：</string>
    <string name="thrid_image">第三次采样图：</string>
    <string name="uploadhuman">上传</string>

    <string name="driver_desc_num">设备序列号：</string>
    <string name="datbasicleve_high">基准高度（米）：</string>
    <!-- QR_Code -->
    <string name="button_ok">OK</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="scan_text">放入框中即可进行二维码扫描</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="preferences_vibrate">preferences_vibrate</string>
    <string name="preferences_play_beep">preferences_play_beep</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_decode_1D_title">1D barcodes</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
    <string name="preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
    <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
    <string name="preferences_supplemental_title">Retrieve more info</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="preview_msg">&#160;preview pages available,click Download for more.</string>
    
    <string name="actual_distance">km</string>
</resources>