<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context="com.king.photo.activity.LadderControlDeviceScanMessage" >

    <RelativeLayout
        android:id="@+id/main_top"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="#363a52"
        android:gravity="center_vertical" >

        <ImageButton
            android:id="@+id/regulatory_back"
            android:layout_width="45dip"
            android:layout_height="45dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:src="@drawable/btn_back"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="梯控设备绑定"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="20dip" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="22dp"
                        android:text="@string/driver_num"
                        android:textColor="#737585" />

                    <TextView
                        android:id="@+id/text_driver_name"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="22dp"
                        android:text="@string/driver_mac"
                        android:textColor="#737585" />

                    <TextView
                        android:id="@+id/text_driver_mac"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="22dp"
                        android:text="@string/driver_project"
                        android:textColor="#737585" />

                    <TextView
                        android:id="@+id/text_driver_project"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="22dp"
                        android:text="@string/install_place"
                        android:textColor="#737585" />

                    <EditText
                        android:id="@+id/edit_driver_install_space"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/edit_background"
                        android:hint="请输入安装地址"
                        android:paddingLeft="5dip"
                        android:singleLine="true"
                        android:textSize="15dp" >

                        <requestFocus />
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="22dp"
                        android:text="@string/driver_name"
                        android:textColor="#737585" />

                    <Spinner
                        android:id="@+id/spinner_choose_driver_name"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:singleLine="true"
                        android:textSize="10dp" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_bind_driver"
                    style="@style/ButtonStyle"
                    android:layout_width="150dip"
                    android:layout_height="45dip"
                    android:layout_gravity="center"
                    android:layout_marginTop="100dp"
                    android:text="@string/bind_driver"
                    android:textColor="@android:color/white" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>