<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ui_background"
    android:gravity="center_horizontal" >

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="120dip"
        android:layout_height="wrap_content"
        android:layout_above="@+id/center_mode"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dip"
        android:src="@drawable/login_logo" />

    <LinearLayout
        android:id="@+id/center_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="17dp"
                android:layout_height="20dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/account" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/login_name"
                    android:layout_width="200dip"
                    android:layout_height="21dp"
                    android:background="@drawable/ui_background"
                    android:hint="帐号"
 					style="FONT-SIZE: 1px"
 					android:textColor="#ffffff"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="200dip"
                    android:layout_height="1dp"
                    android:background="@color/gray" />
                
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:layout_marginTop="10dp" >

            <TextView
                android:layout_width="17dp"
                android:layout_height="20dp"
                  android:layout_marginTop="1dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/psw" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/login_pwd"
                    android:layout_width="200dip"
                    android:layout_height="21dp"
                    android:background="@drawable/ui_background"
                    android:hint="密码"
                    android:password="true"
                    android:textColor="#ffffff"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="200dip"
                    android:layout_height="1dp"
                    android:background="@color/gray" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/login_save_password"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/selector_check_btn_bg"
                    android:button="@null" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/main_save_password"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/login_auto_login"
                     android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/selector_check_btn_bg"
                    android:button="@null" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/main_auto_login"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/main_login"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
         	style="@style/ButtonStyle"
            android:text="@string/main_login"
       
            android:textSize="20dp" />
        
    </LinearLayout>

</RelativeLayout>